# collab-vm-server

./: .gitmodules  .travis.yml  AdminVirtualMachine.hpp  CMakeLists.txt  CapnpMessageFrameBuilder.hpp  CaptchaVerifier.hpp  CaseInsensitiveUtils.hpp  CollabVmChannel.hpp  CollabVmChatRoom.hpp  CollabVmGuacamoleClient.hpp  CollabVmServer.hpp  FileUploadReader.hpp  GuacClient.hpp  GuacamoleClient.hpp  GuacamoleScreenshot.hpp  IPData.hpp  Main.cpp  README.md  Recaptcha.hpp  RecordingController.hpp  ReusableSocketMessage.hpp  SharedStrandGuard.hpp  SocketMessage.hpp  StrandGuard.hpp  Totp.hpp  TurnController.hpp  UserChannel.hpp  Utils.hpp  VoteController.hpp  WebSocketServer.hpp  appveyor.yml  capnp-list.hpp  file_body.hpp
.github/workflows/: main.yml
Database/: Database.cpp  Database.h  ServerConfig.h  ServerConfig.xml  User.h  VmConfig.h
cmake/: FindFilesystem.cmake  FindOpenSSL.cmake  FindPNG.cmake  Findodb-compiler.cmake  MSVCStaticToolchain.cmake
submodules/collab-vm-common/: .gitmodules  CMakeLists.txt  CollabVm.capnp  CollabVmCommon.hpp  Guacamole.capnp
submodules/collab-vm-web-app/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Guacamole.js  README.md  admin.html  admin.js  chat.css  common.js  donate.html  faq.html  guac-bindings.hpp  index.html  keyboard.css  login-register.html  main.js  news.html  package-lock.json  package.json  protocol.cpp  pthread-noop.h  rules.html  runtime.js  semantic.json  view-vm.html  wasm-locate-file.js  webpack.common.js  webpack.dev.js  webpack.prod.js  win-logo-ascii.html
tests/: CMakeLists.txt  Captcha.cpp  Guacamole.cpp  Recaptcha.cpp  Totp.cpp  TurnTest.cpp
